cabal-version: 3.0
name:                th-cas
version:             0.2.0
synopsis:            Compile-time CAS(Computer Algebra System)
description:         Compile-time CAS(Computer Algebra System)
homepage:            https://github.com/junjihashimoto/th-cas
license:             MIT
license-file:        LICENSE
author:              Junji Hashimoto
maintainer:          junji.hashimoto@gmail.com
-- copyright:           
category:            Math, Numeric
build-type:          Simple
extra-source-files:  ChangeLog.md
                   , README.md


bug-reports:         https://github.com/junjihashimoto/th-cas/issues

source-repository head
  type:     git
  location: https://github.com/junjihashimoto/th-cas

library
  -- hs-source-dirs:      src
  exposed-modules:     Algebra.CAS
                     , Algebra.CAS.Base
                     , Algebra.CAS.Diff
                     , Algebra.CAS.GrobnerBasis
                     , Algebra.CAS.Integrate
                     , Algebra.CAS.Solve
                     , Algebra.CAS.TH
  build-depends:       base == 4.*
                     , template-haskell
                     , text
                     , containers
  ghc-options:         -Wall
  default-language:    Haskell2010

-- executable haskell-cas
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -Wall
--   build-depends:       base
--                      , haskell-cas
--   default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Algebra.CAS.THSpec
                     , Algebra.CAS.BasicSpec
                     , Algebra.CAS.DiffSpec
                     , Algebra.CAS.SolveSpec
                     , Algebra.CAS.GrobnerBasisSpec
                     , Algebra.CAS.IntegrateSpec
  build-depends:       base
                     , th-cas
                     , hspec
                     , template-haskell
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite doctests
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         doctests.hs
  ghc-options:     -Wall -threaded
  build-depends:   base,
                   doctest
