cabal-version: 3.0
name:                th-cas
version:             0.2.0
synopsis:            Compile-time CAS(Computer Algebra System)
description:
    th-cas is a Computer Algebra System (CAS) for Haskell that performs symbolic
    mathematics operations at compile-time using Template Haskell. It provides both
    interactive usage (similar to Mathematica) and compile-time optimization for
    mathematical computations with zero runtime overhead.
    .
    Features include:
    .
    * Symbolic differentiation with automatic simplification
    .
    * Symbolic integration using the Risch-Norman heuristic algorithm
    .
    * Linear and polynomial equation solvers
    .
    * Gröbner basis computation for multivariate polynomial systems
    .
    * Pattern matching and coefficient extraction
    .
    * Compile-time code generation via Template Haskell
    .
    The library supports polynomial operations (GCD, LCM, factorization),
    trigonometric and exponential functions, and advanced algorithms including
    Hermite reduction for rational functions and the Extended Euclidean algorithm.
    .
    With 150+ test cases, th-cas provides reliable symbolic computation for
    both runtime and compile-time mathematical operations in Haskell.
homepage:            https://github.com/junjihashimoto/th-cas
license:             MIT
license-file:        LICENSE
author:              Junji Hashimoto
maintainer:          junji.hashimoto@gmail.com
-- copyright:           
category:            Math, Numeric
build-type:          Simple
extra-source-files:  README.md
extra-doc-files:     ChangeLog.md


bug-reports:         https://github.com/junjihashimoto/th-cas/issues

source-repository head
  type:     git
  location: https://github.com/junjihashimoto/th-cas

library
  -- hs-source-dirs:      src
  exposed-modules:     Algebra.CAS
                     , Algebra.CAS.Base
                     , Algebra.CAS.Diff
                     , Algebra.CAS.GrobnerBasis
                     , Algebra.CAS.Integrate
                     , Algebra.CAS.Solve
                     , Algebra.CAS.TH
  build-depends:       base >=4.7 && <5
                     , template-haskell >= 2.20.0 && < 2.23
                     , text >=2.0 && <3
                     , containers >=0.6 && <1
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Algebra.CAS.THSpec
                     , Algebra.CAS.BasicSpec
                     , Algebra.CAS.DiffSpec
                     , Algebra.CAS.SolveSpec
                     , Algebra.CAS.GrobnerBasisSpec
                     , Algebra.CAS.IntegrateSpec
  build-depends:       base >=4.7 && <5
                     , th-cas
                     , hspec
                     , template-haskell
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite doctests
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         doctests.hs
  ghc-options:     -Wall -threaded
  build-depends:   base >=4.7 && <5
                 , doctest
  default-language: Haskell2010
